--- a/codelab_1/codelab_1.ipynb
+++ b/codelab_1/codelab_1.ipynb
@@ -1973,7 +1973,7 @@
         "4. How many data points are we using for training the data? (exact number) How many were used for testing? (exact number)\n",
         "5. Did accuracy increase which model is better based on Occam's Razor?\n",
         "6. Are we overfitting/underfitting the decision tree model? Why? (hint: look for accuracy and cross  validation scores)\n",
-        "7. Are we overfitting/underfitting a linear regression model? Do we have High or Low Bias and Variance?\n",
+        "7. Are we overfitting/underfitting a logistic regression model? Do we have High or Low Bias and Variance?\n",
         "\n",
         "**Write your questions below:**\n",
         "\n",
