added response for question 7

--- a/codelab_1/codelab_1.ipynb
+++ b/codelab_1/codelab_1.ipynb
@@ -1982,7 +1982,8 @@
         "3. blank\n",
         "4. blank\n",
         "5. blank\n",
-        "6. blank"
+        "6. blank\n",
+        "7. blank"
       ]
     },
     {
